--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -1,5 +1,6 @@
 <body>
   <div id="container">
+    <div id="title"><h1>Pom-O-Doro</h1></div>
     <div id="controlrow">
       <div class="lengthbox" id="breaklength">
         <div id="breakuparrow">
