--- a/Simonsays/index.html
+++ b/Simonsays/index.html
@@ -1,1 +1,34 @@
-<canvas id="myCanvas"></canvas>
+<div id="bg">
+  <div id="gameboard">
+    <div id="upleft" class="buttons">
+    </div>
+    <div id="upright" class="buttons">
+    </div>
+    <div id="downleft" class="buttons">
+    </div>
+    <div id="downright" class="buttons">
+    </div>
+    <div id="center">
+      <div id="monitor">
+      </div>
+      <div id="togglerow">
+        <div id="start" class="togglecolumn">
+          <div id="startt" class="toggle">
+          </div>
+          <div class="toggletext">
+            Start
+          </div>
+        </div>
+        <div id="strict" class="togglecolumn">
+          <div id="strictt" class="toggle">
+          </div>
+          <div class="toggletext">
+            Strict
+          </div>
+        </div>  
+      </div>
+      <div id="speaker">
+      <div>
+    </div>
+  </div>
+</div>
