--- a/Simonsays/index.html
+++ b/Simonsays/index.html
@@ -1,34 +1,19 @@
-<div id="bg">
-  <div id="gameboard">
-    <div id="upleft" class="buttons">
+<div class="keyboard">
+  <div id="top">
+    <div id="start" class="menubuts">Start</div>
+    <div id="counter" class="menubuts">0</div>
+    <div id="counter" class="menubuts">Strict</div>
+  </div>
+  <div id="keys">
+    <div id="key1" class="key">
     </div>
-    <div id="upright" class="buttons">
+    <div id="key2" class="key">
     </div>
-    <div id="downleft" class="buttons">
+    <div id="key3" class="key">
     </div>
-    <div id="downright" class="buttons">
+    <div id="key4" class="key">
     </div>
-    <div id="center">
-      <div id="monitor">
-      </div>
-      <div id="togglerow">
-        <div id="start" class="togglecolumn">
-          <div id="startt" class="toggle">
-          </div>
-          <div class="toggletext">
-            Start
-          </div>
-        </div>
-        <div id="strict" class="togglecolumn">
-          <div id="strictt" class="toggle">
-          </div>
-          <div class="toggletext">
-            Strict
-          </div>
-        </div>  
-      </div>
-      <div id="speaker">
-      <div>
-    </div>
+  </div>
+  <div id="output">Press Start!
   </div>
 </div>
