--- a/Simonsays/index.html
+++ b/Simonsays/index.html
@@ -1,8 +1,14 @@
 <div class="keyboard">
   <div id="top">
-    <div id="start" class="menubuts">Start</div>
+    <div id="start" class="menubuts">
+      <div id="starttext" class="menutext">Start</div>
+      <div id="startlight" class="menulight"></div>
+    </div>
     <div id="counter" class="menubuts">0</div>
-    <div id="counter" class="menubuts">Strict</div>
+    <div id="strict" class="menubuts">
+      <div class="menutext">Strict</div>
+      <div id="strictlight" class="menulight"></div>      
+    </div>
   </div>
   <div id="keys">
     <div id="key1" class="key">
